--- a/style.css
+++ b/style.css
@@ -1,153 +1,73 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat");
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
 
-.Container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-h1{
-  font-size: 38px;
-  background-color: black;
-  animation: fadeIn 5s 2s  infinite ;
-  margin-top: 10px;
-  margin-left: 10px;
-  background: black;
-}
-a{
-  text-decoration: none;
-}
-h3{
-  font-size: 40px;
-  color: white;
-  margin: 30px;
-}
-@keyframes fadeIn {
-  0% {
-    font-size: 30px;
-  }
-  20%{
-    font-size: 25px;
-  }
-  30%{
-    font-size: 30px;
-  }
-  40%{
-    font-size: 25px;
-  }
-  50%{
-    font-size: 30px;
-  }
-  60%{
-    font-size: 35px;
-  }
-  70%{
-    font-size: 30px;
-  }
-  80%{
-    font-size: 45px;
-  }
-  90%{
-    font-size: 40px;
-  }
-  100%{
-    font-size: 55px;
-  }
-}
- 
-.Picture {  
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 5px solid #fff;
-  border-radius: 3px;
-  background: #fff;
-  box-shadow: 0 0 20px rgba(107, 243, 3, 0.3);
-  transform: translate(-50%, -50%);
-  user-select: none;
-  cursor: pointer;
-  border-radius: 20px;
-  transition: 0.4s;
-  animation: move 4s 1s linear infinite;
-}
-@keyframes move {
- 0%{
-  border-color: #d4f3b1;
- }
- 10%{
-  border-color: #a0f47c;
- }
- 20%{
-  border-color: #f4e87b;
- }
- 30%{
-  border-color: #f4da8b;
- }
- 40%{
-  border-color: #8bf49d;
- }
- 100%{
-  border-color: #a1fd98;
- }
-}
-.Picture-img {
-  display: block;
-  width: 300px;
-  height: 300px;
-  pointer-events: none;
-  border-radius: 20px 20px 0 0;
-}
 
-.Picture-note {
+
+
+body {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 300px;
-  height: 70px;
-  padding: 12px 24px;
-  font-size: 1.5rem;
-  text-align: center;
-  background-color:dimgray;
-  border-radius: 1px 2px 10px 10px;
-  color: #baea8b;
-}
-.Network {
-  display: inline-block;
-  padding: 0 5px;
-}
-.Network-video {
-  display: inline-block;
-  padding: 0 5px;
+
+  background-size: 1000px;
+  background-image: url("https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg");
+  background-position: center center;
 }
 
-.Network img {
-  width: 1.5rem;
-  aspect-ratio: 1 / 1;
-  vertical-align: middle;
+.paper {
+  background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
+  background-size: 500px;
+  background-position: center center;
+  padding: 20px 100px;
+/*  min-width: 800px; */
+  
+  transform: rotateZ(-5deg);
+  box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
+  
+  position: absolute;
 }
 
-.Network-video img {
-  width: 1.5rem;
-  aspect-ratio: 1 / 1;
-  vertical-align: middle;
-}
-/* --------------------- */
-/* Other styles          */
-/* --------------------- */
-
-* {
-  box-sizing: border-box;
+.paper.heart {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  padding: 0;
+  border-radius: 50%;
 }
 
-body {
-  margin: 0;
-  font-family: 'Caveat', serif;
-  overflow: hidden;
-  background-color: black;
-  min-height: fit-content;
-} 
-#pic_1{
-  height: 320px;
-  width: 300px;
-  margin-top: 1px;
+.paper.image {
+  padding: 10px;
+}
+.paper.image p {
+  font-size: 30px;
+}
+
+img {
+  max-height: 200px;
+  width: 100%;
+  user-select: none;
+}
+
+.paper.heart::after {
+  content: "";
+  background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: 150px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+}
+
+p {
+  font-family: 'Zeyada';
+  font-size: 50px;
+  color: rgb(0,0,100);
+  opacity: 0.75;
+  user-select: none;
+  
+  filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
 }
