--- a/src/puzzle photo/Heart_Trial_Animation-main/style.css
+++ b/src/puzzle photo/Heart_Trial_Animation-main/style.css
@@ -24,7 +24,32 @@ span {
     transform: translate(-50%, -50%);
     animation: animate 6s linear;
 }
+h1{
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    margin-top:50%;
+}
+h1:hover{
+    color: rgb(68, 215, 20);
+    animation: honey 1s 0.5s  infinite linear ;
+}
+a{
+    text-decoration: none;
+}
+@keyframes honey {
+    0% {
+        transform: scale(1);
+    }
 
+    50% {
+        transform: scale(2.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
 @keyframes animate {
     0% {
         transform: translate(-50%, -50%);
